# brainfc

./: CMakeLists.txt  README.md
src/: codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  objcodegen.cpp  objcodegen.h
